alignself fix

--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -78,7 +78,7 @@ body {
   width: 90%;
   margin: 0 auto;
   justify-content: space-between;
-  align-items: flex-start;
+  align-self: flex-start;
   height: auto
 }
 
